--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 ###############################################################################
+* linguist-vendored
+###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
@@ -11,6 +13,7 @@
 # Note: This is only used by command line
 ###############################################################################
 #*.cs     diff=csharp
+*.cs linguist-vendored=false
 
 ###############################################################################
 # Set the merge driver for project and solution files
