Updated Bootstrap from 3.0.0 to 3.4.1

--- a/aspnet_tutorial/Web.config
+++ b/aspnet_tutorial/Web.config
@@ -6,9 +6,9 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+    
+    
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-aspnet_tutorial-20200212053214.mdf;Initial Catalog=aspnet-aspnet_tutorial-20200212053214;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="simple_store_dbEntities" connectionString="metadata=res://*/Models.SimpleStoreModels.csdl|res://*/Models.SimpleStoreModels.ssdl|res://*/Models.SimpleStoreModels.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=Eldy12;port=3307;database=simple_store_db;persistsecurityinfo=True&quot;" providerName="System.Data.EntityClient" />
