--- a/aspnet_tutorial/packages.config
+++ b/aspnet_tutorial/packages.config
@@ -3,12 +3,15 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.4.1" targetFramework="net452" />
   <package id="BouncyCastle" version="1.8.3.1" targetFramework="net452" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="EntityFramework" version="6.3.0" targetFramework="net452" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net452" />
+  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net452" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net452" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
@@ -28,10 +31,14 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
-  <package id="MySql.Data" version="8.0.16" targetFramework="net452" />
-  <package id="MySql.Data.EntityFramework" version="8.0.16" targetFramework="net452" />
+  <package id="MySql.Data" version="8.0.20" targetFramework="net452" />
+  <package id="MySql.Data.EntityFramework" version="8.0.20" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net452" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
