Setting up connectionString to the database

--- a/aspnet_tutorial/Web.config
+++ b/aspnet_tutorial/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-aspnet_tutorial-20200212053214.mdf;Initial Catalog=aspnet-aspnet_tutorial-20200212053214;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="simple_store_dbEntities" connectionString="metadata=res://*/Models.SimpleStoreModels.csdl|res://*/Models.SimpleStoreModels.ssdl|res://*/Models.SimpleStoreModels.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=Eldy12;port=3307;persistsecurityinfo=True;database=simple_store_db&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
